# api-plateform-flask

./: .flaskenv  config.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  error.py  models.py  routes.py  schemas.py  utils.py
app/static/: swagger.json
migrations/versions/: 0bb0c543770a_add_role_in_user.py  1136a9266ea7_updateuserschemas.py  6988656813fe_update_models_and_schemas.py
test/: test_api.py
