[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ibrahim Mohamed <ibrahimmohamedprof@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"
marshmallow = "^3.22.0"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.1.0"
flasgger = "^0.9.7.1"
pyjwt = "^2.9.0"
flask-jwt-extended = "^4.6.0"
pytest = "^8.3.3"
pytest-flask = "^1.3.0"
flask-testing = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
